# dune

./: .gitignore  README.md
backend/: Cargo.toml  README.md
backend/migrations/2022-08-19-155426_create_user/: up.sql
backend/migrations/2022-08-19-155659_alter_user_add_unique/: down.sql  up.sql
backend/migrations/2022-08-21-141847_create_submission/: down.sql  up.sql
backend/migrations/2022-08-21-174543_create_benchmarks/: down.sql  up.sql
backend/src/: api_error.rs  db.rs  main.rs  schema.rs
backend/src/handlers/: auth_handler.rs  benchmark_handler.rs  mod.rs  submission_handler.rs  user_handler.rs
backend/src/models/: benchmark.rs  mod.rs  submission.rs  user.rs
backend/src/user/: auth_handler.rs  mod.rs  model.rs  routes.rs
backend/src/users/: model.rs
frontend/: README.md
worker/: go.mod  go.sum  main.go
