[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.7"
dotenv = "0.15"
listenfd = "1.0"
log = "0.4"
env_logger = "0.6"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = {version = "1.4", features = ["chrono", "postgres", "r2d2", "uuidv07"]}
diesel_migrations = "1.4"
r2d2 = "0.8"
lazy_static = "1.4"
rand = "0.8"
rust-argon2 = "1.0"
actix-identity = "0.4"
futures = "0.3.8"
derive_more = "0.99"
